--- a/frontend/src/usecases/common/components/table/table/Table.scss
+++ b/frontend/src/usecases/common/components/table/table/Table.scss
@@ -27,8 +27,7 @@
 
   th, td {
     border-bottom: $table-row-border-color;
-    padding: 10px;
-    vertical-align: top;
+    padding: 8px;
   }
 
   td {
@@ -37,5 +36,9 @@
 
   tr:hover {
     background-color: $light-grey;
+  }
+
+  .TableHead-status {
+    width: 120px;
   }
 }
